# tigrescript

./: Cargo.toml  LICENSE  README.md  build.rs  rum.bash  run.bat
examples/: fib.ml  hello.ml  web_server.ml
src/: lib.rs  main.rs
src/backend/: llvm.rs  mod.rs  wasm.rs  x86.rs
src/frontend/: ast.rs  diagnostics.rs  lexer.rs  mod.rs  parser.rs
src/middle/: mod.rs  optimizer.rs  symbol_table.rs  typechecker.rs
src/runtime/: gc.rs  memory.rs  mod.rs  vm.rs
src/tools/: debugger.rs  mod.rs  package_manager.rs  repl.rs
stdlib/: collections.ml  core.ml  http.ml  io.ml
tests/: lexer_test.rs  parser_tests.rs  typecheck_tests.rs
